DE607: fix z-index for overall score
Former-commit-id: 123873901d503d31536103201dfd8235849db451

--- a/assets/less/reports/isr.less
+++ b/assets/less/reports/isr.less
@@ -169,4 +169,9 @@ body.isr {
       }
     }
   }
+  .confidenceLevel {
+    .scoreWrapper {
+      z-index: 110;
+    }
+  }
 }
